fix:alignment and font size fixes

--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -535,7 +535,6 @@ $text-color: #333333;
         }
     }
 }
-
 /* Sidebar Styling of litto */
 .sidebar {
     background-color:$sidebar-bg;
@@ -550,7 +549,7 @@ $text-color: #333333;
     gap: 12px;
     margin-bottom: 25px;
     padding-bottom: 15px;
-    border-bottom: 1px solid #e0e0e0;
+    border-bottom: 1px solid $border-color;
 }
 
 .sidebar .sidebar-header img {
@@ -559,15 +558,15 @@ $text-color: #333333;
 }
 
 .sidebar .sidebar-header h3 {
-    font-size: 16px;
+    font-size: 10px;
     font-weight: 600;
     margin: 0;
-    color: #2C2C2C;
+    color: $font-dark;
 }
 
 .sidebar .sidebar-header p {
-    font-size: 12px;
-    color: #E31E54;
+    font-size: 7px;
+    color: $red;
     margin: 0;
 }
 
@@ -577,9 +576,9 @@ $text-color: #333333;
 }
 
 .sidebar .sidebar-content .sidebar-section h4 {
-    font-size: 20px;
+    font-size: 15px;
     margin-bottom: 15px;
-    color: #2C2C2C;
+    color: $font-dark;
     font-weight: 600;
 }
 
@@ -588,7 +587,7 @@ $text-color: #333333;
     right: 0;
     top: 5px;
     font-size: 12px;
-    color: #E31E54;
+    color: $red;
     text-decoration: none;
 }
 
@@ -605,7 +604,7 @@ $text-color: #333333;
     display: flex;
     flex-direction: column;
     align-items: flex-start;
-    background: #fff;
+    background: $main-bg;
     border-radius: 12px;
     padding: 15px 20px;
     box-shadow: 0 1px 3px rgba(0, 0, 0, 0.05);
@@ -619,16 +618,16 @@ $text-color: #333333;
 .sidebar .sidebar-content .sidebar-section ul li .header-row {
     display: flex;
     justify-content: space-between;
-    width: 100%; // Ensure full width for alignment
-    margin-bottom: 5px; // Spacing below the header row
+    width: 100%;
+    margin-bottom: 5px; 
 }
 
 .sidebar .sidebar-content .sidebar-section ul li .value-row {
     display: flex;
     justify-content: space-between;
-    align-items: center; // Align items vertically in the center
-    width: 100%; // Ensure full width for alignment
-    margin-top: 5px; // Spacing above the value row
+    align-items: center; 
+    width: 100%; 
+    margin-top: 5px; 
 }
 
 .sidebar .sidebar-content .sidebar-section ul li .rank-label,
@@ -636,8 +635,8 @@ $text-color: #333333;
     font-size: 5px;
     color: #6B7280;
     font-weight: 600;
-    flex: row; // Equal width for alignment
-    text-align: center; // Center-align text
+    flex: row; 
+    text-align: center; 
 }
 
 .sidebar .sidebar-content .sidebar-section ul li .rank-number,
@@ -645,8 +644,7 @@ $text-color: #333333;
 .sidebar .sidebar-content .sidebar-section ul li .stat-value {
     font-size: 12px;
     font-weight: 600;
-    color: #2C2C2C;
-    text-align: center; // Center-align text
-    flex: 1; // Equal width for alignment
-    text-wrap:nowrap; // Prevent text wrapping
+    color: $font-dark;
+    text-align: center;
+    text-wrap:nowrap; 
 }
